--- a/AnnotationApp/app/build.gradle
+++ b/AnnotationApp/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "chen.pa.com.annotationapp"
+        applicationId "com.pa.annotationapp"
         minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-        javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -21,6 +21,11 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation project(':annotions-libs')
-    implementation project(':annotions-complier')
+
+    //使用注解
+    implementation project(':annotions-lib')
+    //注解的处理，替代以前的android-apt
+    annotationProcessor project(':complier-lib')
+
+
 }
