更新目录结构

--- a/complier-lib/build.gradle
+++ b/complier-lib/build.gradle
@@ -9,6 +9,8 @@ dependencies {
     implementation project(':annotions-lib')
 
 }
-
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
