--- a/annotions-lib/build.gradle
+++ b/annotions-lib/build.gradle
@@ -6,3 +6,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 }
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
