--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,11 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.pa.annotationapp"
+        applicationId "com.annotations.app"
         minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -20,11 +19,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
-    //使用注解
+    //注解
     implementation project(':annotions-lib')
-    //注解的处理，替代以前的android-apt
+    //注解的处理器，替代以前的android-apt
     annotationProcessor project(':complier-lib')
 
 
